Tidied up QT wallet overview and added support for shielded coins

--- a/src/qt/res/css/light-hires-retro.css
+++ b/src/qt/res/css/light-hires-retro.css
@@ -868,7 +868,31 @@ font-size:9pt;
 margin-left:0px;
 }
 
+
 QWidget .QFrame#frame .QLabel#labelWatchImmature { /* Watch-only Immature Balance */
+qproperty-alignment: 'AlignVCenter | AlignLeft';
+font-size:9pt;
+margin-left:16px;
+}
+
+
+QWidget .QFrame#frame .QLabel#labelShieldedText { /* Shielded Balance Label */
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:160px;
+font-size:9pt;
+background-color:#F8F6F6;
+margin-right:5px;
+padding-right:5px;
+}
+
+QWidget .QFrame#frame .QLabel#labelShielded { /* Shielded Balance */
+qproperty-alignment: 'AlignVCenter | AlignLeft';
+font-size:9pt;
+margin-left:0px;
+}
+
+
+QWidget .QFrame#frame .QLabel#labelWatchShielded { /* Watch-only Shielded Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:9pt;
 margin-left:16px;
@@ -1635,7 +1659,7 @@ QLabel#transactionSumLabel { /* Example of setObjectName for widgets without nam
 color:#333333;
 font-weight:bold;
 }
- 
+
 QLabel#transactionSum { /* Example of setObjectName for widgets without name */
 color:#333333;
 }
@@ -1649,5 +1673,3 @@ background-color:#F8F6F6;
 QDialog#TransactionDescDialog QTextEdit { /* Contents of Receive Coin Dialog */
 border:1px solid #d7d7d7;
 }
-
-
