--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -793,19 +793,21 @@ margin-left:3px;
 
 QWidget .QFrame#frame .QLabel#labelSpendable { /* Spendable Header */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
+min-width:140px;
 font-size:12px;
 margin-left:18px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchonly { /* Watch-only Header */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
+min-width:140px;
 font-size:12px;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelBalanceText { /* Available Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
-min-width:160px;
+min-width:140px;
 background-color:#56ABD8;
 color:#ffffff;
 margin-right:5px;
@@ -816,7 +818,8 @@ min-height:35px;
 }
 
 QWidget .QFrame#frame .QLabel#labelBalance { /* Available Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 font-weight:bold;
 color:#56ABD8;
@@ -824,14 +827,15 @@ margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchAvailable { /* Watch-only Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelPendingText { /* Pending Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
-min-width:160px;
+min-width:140px;
 font-size:12px;
 background-color:#F8F6F6;
 margin-right:5px;
@@ -839,20 +843,22 @@ padding-right:5px;
 }
 
 QWidget .QFrame#frame .QLabel#labelUnconfirmed { /* Pending Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchPending { /* Watch-only Pending Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelImmatureText { /* Immature Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
-min-width:160px;
+min-width:140px;
 font-size:12px;
 background-color:#F8F6F6;
 margin-right:5px;
@@ -860,35 +866,70 @@ padding-right:5px;
 }
 
 QWidget .QFrame#frame .QLabel#labelImmature { /* Immature Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchImmature { /* Watch-only Immature Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
+font-size:12px;
+margin-left:16px;
+}
+
+QWidget .QFrame#frame .QLabel#labelShieldedText { /* Available Shielded Label */
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
+background-color:#56ABD8;
+color:#ffffff;
+margin-right:5px;
+padding-right:5px;
+font-weight:bold;
+font-size:14px;
+min-height:35px;
+}
+
+QWidget .QFrame#frame .QLabel#labelShielded { /* Shielded  Balance */
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
+font-size:12px;
+font-weight:bold;
+color:#56ABD8;
+margin-left:0px;
+}
+
+QWidget .QFrame#frame .QLabel#labelWatchShielded { /* Watch-only Shielded Balance */
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
 margin-left:16px;
 }
 
 QWidget .QFrame#frame .QLabel#labelTotalText { /* Total Balance Label */
 qproperty-alignment: 'AlignVCenter | AlignRight';
-min-width:160px;
+min-width:140px;
 font-size:12px;
+font-weight:bold;
 background-color:#F8F6F6;
 margin-right:5px;
 padding-right:5px;
 }
 
 QWidget .QFrame#frame .QLabel#labelTotal { /* Total Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
+font-weight:bold;
 margin-left:0px;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchTotal { /* Watch-only Total Balance */
-qproperty-alignment: 'AlignVCenter | AlignLeft';
+qproperty-alignment: 'AlignVCenter | AlignRight';
+min-width:140px;
 font-size:12px;
+font-weight:bold;
 margin-left:16px;
 }
 
@@ -1624,7 +1665,7 @@ QLabel#transactionSumLabel { /* Example of setObjectName for widgets without nam
 color:#333333;
 font-weight:bold;
 }
- 
+
 QLabel#transactionSum { /* Example of setObjectName for widgets without name */
 color:#333333;
 }
@@ -1638,5 +1679,3 @@ background-color:#F8F6F6;
 QDialog#TransactionDescDialog QTextEdit { /* Contents of Receive Coin Dialog */
 border:1px solid #d7d7d7;
 }
-
-
